new checks added

--- a/configurations/config.enums.json
+++ b/configurations/config.enums.json
@@ -3,5 +3,10 @@
         "en": "EN",
         "ar": "AR",
         "fr": "FR"
-    }
+    },
+    "genders": [
+        "male",
+        "female",
+        "other"
+    ]
 }
