fix: update profile pushed, for gender, language, profile image

--- a/configurations/config.enums.json
+++ b/configurations/config.enums.json
@@ -4,6 +4,11 @@
         "ar": "AR",
         "fr": "FR"
     },
+    "allowedLanguagesArray": [
+        "EN",
+        "AR",
+        "FR"
+    ],
     "genders": [
         "male",
         "female",
